Added playbook basic structure and also Mallydoor project

--- a/source/_navigation-side.erb
+++ b/source/_navigation-side.erb
@@ -1,11 +1,19 @@
 <div class="hide-for-small beta">
   <div class="sidebar">
     <ul class="side-nav">
-      <li class="heading">Structure</li>
+      <li class="heading">Pre-Design</li>
       <li><a href="#">Link 1</a></li>
       <li><a href="#">Link 2</a></li>
       <li><a href="#">Link 3</a></li>
+      <li class="heading">Design/Development</li>
       <li><a href="#">Link 4</a></li>
+      <li><a href="#">Link 1</a></li>
+      <li class="heading">Content</li>
+      <li><a href="#">Link 1</a></li>
+      <li><a href="#">Link 1</a></li>
+      <li class="heading">Deployment</li>
+      <li><a href="#">Link 1</a></li>
+      <li><a href="#">Link 1</a></li>
     </ul>
   </div>
 </div>
