--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -18,40 +18,25 @@ title: Timothy Voice
           <p class="branding-summary">
             I am a Brooklyn based designer / developer passionate about clean readable code powering clean, readable content.
           </p>
-          <!-- <div class="contact">
-            <i class="ion-social-github"></i>              
-            <i class="ion-social-twitter"></i>        
-            <i class="ion-ios7-email"></i>
-          </div> -->
         </div>
       </div><!-- branding-intro -->
     </div><!-- Branding -->
-  </div>
-</div>
-
-
+  </div><!-- row -->
+</div><!-- branding-band -->
 <div id="projects">
-  
   <%= partial "ggs" %>
-
   <%= partial "octavejournal" %>
-
+  <%= partial "mallydoor" %>
 </div><!-- projects -->
-    
 <div id="connect" class="connect-band">
   <div class="row">
     <div class="small-12 columns connect-links">
       <p class="connect-text">
-        
-      </p>
-      
-          <i class="ion-social-github"></i>      
-        
-          <i class="ion-social-twitter"></i>
-        
-          <i class="ion-ios7-email"></i>
-
-    </div>
-    
+        reach out, check my feed or inspect my code   
+      </p>      
+      <i class="ion-social-github"></i>              
+      <i class="ion-social-twitter"></i>        
+      <i class="ion-ios7-email"></i>
+    </div><!-- connect-links -->    
   </div><!-- row -->
 </div><!-- connect-band -->
