--- a/source/stylesheets/partials/_typography.scss
+++ b/source/stylesheets/partials/_typography.scss
@@ -186,6 +186,7 @@ ul.detail-tech-phases {
 .connect-text {
   @extend .projects-single-teaser;
   color: $black;
+  font-size: 1.5rem;
 }
 
 .about-title {
