fixed broken links

--- a/source/_octavejournal.erb
+++ b/source/_octavejournal.erb
@@ -49,7 +49,7 @@ title: Octave Journal
               </ul>                 
             </div><!-- detail-tech -->                                        
             <a href="https://github.com/timsvoice/great_green_sources" class="small button secondary">View Source</a>
-              <a href="www.octavejournal.com" class="small button secondary">View Project</a>
+              <a href="http://www.octavejournal.com" class="small button secondary">View Project</a>
           </div><!-- mockup-container -->             
         </div><!-- projects-single-container -->
       </div><!-- projects-single -->
