added login infor

--- a/source/_octavejournal.erb
+++ b/source/_octavejournal.erb
@@ -23,7 +23,7 @@ title: Octave Journal
               </p>
               <p class="detail-text">
                  The Octave Journal is published via bi-monthly, custom coded email campaign. We consistently drove up our readership numbers Using Mailchimp and Google Analytics data. 
-              </p>                            
+              </p>                
             </div><!-- project-details -->
           </div><!-- projects-summary -->    
           
@@ -50,6 +50,13 @@ title: Octave Journal
             </div><!-- detail-tech -->                                        
             <a href="https://github.com/timsvoice/great_green_sources" class="small button secondary">View Source</a>
               <a href="http://www.octavejournal.com" class="small button secondary">View Project</a>
+              <p class="detail-tech-list">
+                Note: you will need credentials to access this site
+                <br>
+                Username: guest
+                <br>
+                Password: guest
+              </p>
           </div><!-- mockup-container -->             
         </div><!-- projects-single-container -->
       </div><!-- projects-single -->
