--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -9,14 +9,16 @@ title: Timothy Voice
     <div id="splash" class="small-12 medium-12 large-12 columns branding">
       <div class="branding-intro">
         <h1 class="branding-title">
-          Timothy Voice
+          Test 
+          <br>
+          Typography
         </h1>
           <p class="branding-byline">
-          concept code content
+            Lorem ipsum dolor.
         </p>
         <div class="small-10 medium-5 column alpha">
           <p class="branding-summary">
-            I am a Brooklyn based designer / developer passionate about clean readable code powering clean, readable content.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem, possimus.          
           </p>
         </div>
       </div><!-- branding-intro -->
@@ -34,9 +36,9 @@ title: Timothy Voice
       <p class="connect-text">
         reach out, check my feed or inspect my code   
       </p>      
-      <i class="ion-social-github"></i>              
-      <i class="ion-social-twitter"></i>        
       <i class="ion-ios7-email"></i>
+      <i class="ion-social-twitter"></i>        
+      <i class="ion-social-github"></i>                    
     </div><!-- connect-links -->    
   </div><!-- row -->
 </div><!-- connect-band -->
