--- a/source/stylesheets/modules/_variables.scss
+++ b/source/stylesheets/modules/_variables.scss
@@ -3,6 +3,7 @@
 ============================ */
 
 $branding-color: hsla(202, 89, 58%, 1);
+$branding-darker: hsla(202, 89, 28%, 1);
 $branding-accent: hsla(202, 89, 58%, 0.1);
 // $white: hsla(209, 32, 59%, 1);
 $octavejournal-color: hsla(229, 43, 39%, 1);
