added homepage simplified layout

--- a/source/stylesheets/modules/_variables.scss
+++ b/source/stylesheets/modules/_variables.scss
@@ -35,8 +35,8 @@ $underline: 0.0625rem dotted;
 	Borders
 ============================ */
 
-$border-thick: 0.125rem $black solid;
-$border-thin:  0.125rem $light-gray solid;
+$border-thick: 0.25rem $branding-darker solid;
+$border-thin:  0.125rem $branding-darker solid;
 
 /* ============================ 
 	Backgrounds
