--- a/source/stylesheets/partials/_typography.scss
+++ b/source/stylesheets/partials/_typography.scss
@@ -128,6 +128,41 @@
 
 // projects
 
+@include fadeRight();
+
+.projects-title {
+  font-size: 5rem;
+  font-weight: $heavy-text;
+  color: darken($branding-color, 15%);
+  text-transform: uppercase;
+  padding-top: 1rem;
+}
+
+.project-list {  
+  .project {
+    list-style: none;
+    margin-top: 2rem;
+  }
+  .project-link {
+    color: $branding-color;
+    font-weight: $heavy-text;
+    margin-right: 0.5rem;
+    &:hover {
+      @include underline ($thickness: 0.25rem);
+    }
+  }
+  a {
+  font-size: 3rem; 
+    font-weight: $light-text;   
+    &:hover {
+      text-decoration: none;
+    }
+  }
+  .ion-ios7-arrow-thin-right {
+    font-size: 5rem;
+  }
+}
+
 .projects-single-title {
   font-family: $body-font;
   font-weight: $heavy-text;
@@ -179,7 +214,19 @@ ul.detail-tech-phases {
   @extend .detail-tech-phases;
 }
 
+// process
+
+.process-title {
+  @extend .projects-title;
+  color: darken($branding-color, 27.5%)
+}
+
 // contact 
+
+.connect-title {
+  @extend .projects-title;
+  color: darken($branding-color, 27.5%) 
+}
 
 .connect-links {
   i {
@@ -191,6 +238,9 @@ ul.detail-tech-phases {
   @extend .projects-single-teaser;
   color: $black;
   font-size: 1.5rem;
+  a {
+    @include underline($color: $branding-darker);
+  }
 }
 
 .about-title {
