--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -9,36 +9,58 @@ title: Timothy Voice
     <div id="splash" class="small-12 medium-12 large-12 columns branding">
       <div class="branding-intro">
         <h1 class="branding-title">
-          Test 
+          Timothy 
           <br>
-          Typography
+          Voice
         </h1>
-          <p class="branding-byline">
-            Lorem ipsum dolor.
+        <p class="branding-byline">
+          concept code content
         </p>
         <div class="small-10 medium-5 column alpha">
           <p class="branding-summary">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem, possimus.          
+            I am a Brooklyn based designer/developer, passionate about clean, readable code powering clean, readable content.          
           </p>
         </div>
       </div><!-- branding-intro -->
     </div><!-- Branding -->
   </div><!-- row -->
 </div><!-- branding-band -->
-<div id="projects">
-  <%= partial "ggs" %>
-  <%= partial "octavejournal" %>
-  <%= partial "mallydoor" %>
+
+<div id="projects" class="projects-band">
+  <div class="row">
+    <h2 class="projects-title">
+      Projects
+    </h2>
+    <ul class="project-list">
+      <li class="project">
+        <%= link_to 'Personal Site', 'timothyvoice', :class => 'project-link', :class => 'project-link' %>
+        <a class="source-link hidden" href="http://github.com/timsvoice/timothyvoice">| view source</a>
+      </li>
+      <li class="project">
+        <%= link_to 'Great Green Sources', 'ggs', :class => 'project-link' %>
+        <a class="source-link hidden" href="http://github.com/timsvoice/great_green_sources">| view source</a>
+      </li>
+      <li class="project">
+        <%= link_to 'Octave Journal', 'octavejournal', :class => 'project-link' %>
+        <a class="source-link hidden" href="http://github.com/timsvoice/living_octave_journal">| view source</a>
+      </li>
+      <li class="project">
+        <%= link_to 'Mallydoor', 'mallydoor', :class => 'project-link' %>
+        <a class="source-link hidden" href="http://github.com/timsvoice/mallydoor">| view source</a>
+      </li>
+    </ul><!-- project-list -->
+  </div>
 </div><!-- projects -->
+
 <div id="connect" class="connect-band">
   <div class="row">
-    <div class="small-12 columns connect-links">
+    <h2 class="connect-title">
+      connect
+    </h2>
+    <div class="connect-links">
       <p class="connect-text">
-        reach out, check my feed or inspect my code   
+        The best way to reach me is at <a href="mailto:timsethvoice@gmail.com">timsethvoice@gmail.com</a> or <a href="http://twitter.com/timsvoice">@timsvoice</a>. You can also check out my code at <a href="http://gitgub.com/timsvoice">Github</a> where I keep all my projects, including this one. I look forward to hearing from you.   
       </p>      
-      <i class="ion-ios7-email"></i>
-      <i class="ion-social-twitter"></i>        
-      <i class="ion-social-github"></i>                    
     </div><!-- connect-links -->    
   </div><!-- row -->
 </div><!-- connect-band -->
