--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -18,6 +18,6 @@
 
     <%= partial "navigation" %>  
 
-    <%= javascript_include_tag  "all", "app", "headroom", "owlcarousel/owl-carousel/owl.carousel", "about" %>
+    <%= javascript_include_tag  "all", "app", "headroom", "owlcarousel/owl-carousel/owl.carousel", "about", "waypoints/waypoints" %>
   </body>
 </html>
