--- a/source/stylesheets/modules/_mixins.scss
+++ b/source/stylesheets/modules/_mixins.scss
@@ -28,6 +28,46 @@
   font-size: 0.85rem;
 }
 
+@mixin underline($color: $branding-color, $thickness: 0.125rem, $style: solid) {
+  border-bottom: $thickness $color $style; 
+}
+
+@mixin fadeRight($duration: 1s, $distance: 50px) {
+  .animated { 
+    -webkit-animation-duration: $duration; 
+    animation-duration: $duration; 
+    -webkit-animation-fill-mode: both; 
+    animation-fill-mode: both; 
+    -webkit-animation-timing-function: ease-out; 
+    animation-timing-function: ease-out; 
+  } 
+
+  @-webkit-keyframes fadeInRight { 
+    0% { 
+        opacity: 0; 
+        -webkit-transform: translateX($distance); 
+    } 
+    100% { 
+        opacity: 1; 
+        -webkit-transform: translateX(0); 
+    } 
+  } 
+  @keyframes fadeInRight { 
+    0% { 
+        opacity: 0; 
+        transform: translateX($distance); 
+    } 
+    100% { 
+        opacity: 1; 
+        transform: translateX(0); 
+    } 
+  } 
+  .fadeInRight { 
+    -webkit-animation-name: fadeInRight; 
+    animation-name: fadeInRight;   
+  }
+}
+
 /* ============================ 
   Borders
 ============================ */
