initial kickstarter commit

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -18,7 +18,7 @@ title: Timothy Voice
         </p>
         <div class="small-10 medium-5 column alpha">
           <p class="branding-summary">
-            I am a Brooklyn based designer/developer, passionate about clean, readable code powering clean, readable content.          
+            I am a Brooklyn based designer/developer, passionate about clean, readable code powering clean, readable content.              
           </p>
         </div>
       </div><!-- branding-intro -->
@@ -34,19 +34,31 @@ title: Timothy Voice
     <ul class="project-list">
       <li class="project">
         <%= link_to 'Personal Site', 'timothyvoice', :class => 'project-link', :class => 'project-link' %>
-        <a class="source-link hidden" href="http://github.com/timsvoice/timothyvoice">| view source</a>
+        <div class="project-links hidden">
+          <a href="www.octavejournal.com" class="visit-link"> | visit </a>
+          <a class="source-link" href="https://github.com/timsvoice/timothyvoice">| view code</a>
+        </div>              
       </li>
       <li class="project">
         <%= link_to 'Great Green Sources', 'ggs', :class => 'project-link' %>
-        <a class="source-link hidden" href="http://github.com/timsvoice/great_green_sources">| view source</a>
+       <div class="project-links hidden">
+          <a href="www.octavejournal.com" class="visit-link"> | visit </a>
+          <a class="source-link" href="https://github.com/timsvoice/great_green_sources">| view code</a>
+       </div>        
       </li>
       <li class="project">
         <%= link_to 'Octave Journal', 'octavejournal', :class => 'project-link' %>
-        <a class="source-link hidden" href="http://github.com/timsvoice/living_octave_journal">| view source</a>
+        <div class="project-links hidden">
+          <a href="www.octavejournal.com" class="visit-link"> | visit </a>
+          <a class="source-link" href="http://github.com/timsvoice/living_octave_journal">| view code</a>
+        </div>         
       </li>
       <li class="project">
         <%= link_to 'Mallydoor', 'mallydoor', :class => 'project-link' %>
-        <a class="source-link hidden" href="http://github.com/timsvoice/mallydoor">| view source</a>
+        <div class="project-links hidden">
+          <a href="www.mallydoor.com" class="visit-link"> | visit </a>
+          <a class="source-link" href="http://github.com/timsvoice/mallydoor">| view code</a>
+        </div>         
       </li>
     </ul><!-- project-list -->
   </div>
@@ -59,7 +71,7 @@ title: Timothy Voice
     </h2>
     <div class="connect-links">
       <p class="connect-text">
-        The best way to reach me is at <a href="mailto:timsethvoice@gmail.com">timsethvoice@gmail.com</a> or <a href="http://twitter.com/timsvoice">@timsvoice</a>. You can also check out my code at <a href="http://gitgub.com/timsvoice">Github</a> where I keep all my projects, including this one. I look forward to hearing from you.   
+        The best way to reach me is at <a href="mailto:timsethvoice@gmail.com">timsethvoice@gmail.com</a> or <a href="http://twitter.com/timsvoice">@timsvoice</a>. You can also check out my code at <a href="http://gitgub.com/timsvoice">Github</a> where I keep all my projects, including this one.  
       </p>      
     </div><!-- connect-links -->    
   </div><!-- row -->
