--- a/source/stylesheets/app.css.scss
+++ b/source/stylesheets/app.css.scss
@@ -29,6 +29,7 @@
 @import "partials/buttons";
 @import "partials/images";
 @import "partials/project";
+@import "partials/kickstarter";
  
 
 // Or selectively include components
