--- a/source/stylesheets/modules/_variables.scss
+++ b/source/stylesheets/modules/_variables.scss
@@ -1,34 +1,40 @@
 /* ============================ 
 	Colors
 ============================ */
+//base
+$white: hsla(0,0,100%,1);
+$black: hsla(0,0,0%,1);
+$dark-gray: hsla(0,0,30%,1);
+$light-gray: hsla(0,0,70%,1);
 
-$branding-color: hsla(202, 89, 58%, 1);
-$branding-darker: hsla(202, 89, 28%, 1);
-$branding-accent: hsla(202, 89, 58%, 0.1);
-// $white: hsla(209, 32, 59%, 1);
+//global
+$branding-color: hsla(202, 89, 58%, 1);//light blue
+$branding-darker: hsla(202, 89, 21%, 1);//dark blue
+$accent-color: hsla(150, 91, 56%, 1);//seafoam
+$highlight-color: hsla(44, 100, 59%, 1);//yellow
+$compliment: hsla(33, 100, 59%, 1);//yellow
+
+//projects
 $octavejournal-color: hsla(229, 43, 39%, 1);
 $ggs-color: hsla(134, 27, 27%, 1);
-$gray: hsla(0,0,91%,1);
-$light-gray: hsla(0,0,60%,1);
-$white: hsla(0,0,100%,1);
-$transparent-white: hsla(0,0,100%,0.5);
-$dark-gray: hsla(0,0,53%,1);
-$black: hsla(0,0,0%,1);
-$navy-black: hsla(219,100,13%,1);
-$transparent-black: hsla(0,0,0%,0.75);
-$accent: hsla(202, 89, 58%, 1);
+
+//applications
+$kickstarter: hsla(144, 81, 87%, 1);
 
 /* ============================ 
 	Typography
 ============================ */
-
+//fonts
 $body-font: "Raleway", Helvetica, Arial, sans-serif;
 $text-font: "Lato", Times, serif;
+$accent-font: "knewave", Times, serif;
 
+//font weights
 $heavy-text:900;
 $medium-text:400;
 $light-text:200;
 
+//decoration
 $underline: 0.0625rem dotted;
 
 /* ============================ 
