--- a/source/stylesheets/partials/_typography.scss
+++ b/source/stylesheets/partials/_typography.scss
@@ -1,3 +1,18 @@
+/* ===================
+  Fonts
+=================== */
+
+@font-face {
+  font-family: 'knewave';
+  src: url('fonts/knewave/webfonts/knewave-outline-webfont.eot'); /* IE9 Compat Modes */
+  src: url('fonts/knewave/webfonts/knewave-outline-webfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('fonts/knewave/webfonts/knewave-outline-webfont.woff') format('woff'), /* Modern Browsers */
+       url('fonts/knewave/webfonts/knewave-outline-webfont.ttf')  format('truetype'), /* Safari, Android, iOS */
+       url('fonts/knewave/webfonts/knewave-outline-webfont.svg#svgFontName') format('svg'); /* Legacy iOS */
+}
+
+/*==================*/
+
 .bold {
   font-weight: $heavy-text;
 }
@@ -26,7 +41,7 @@
 
 .branding-byline {
   font-size: 2.5rem;
-  font-weight: $medium-text;
+  font-weight: $heavy-text;
   text-align: left;
   padding-left: 0.125rem;
   margin-bottom: 0;
@@ -78,9 +93,10 @@
 .top-bar-section {
   padding-top: 0.75rem;
   ul, li:not(.has-form) a:not(.button), ul li > a {
-    color: darken($branding-color, 40%);
+    color: darken($branding-color, 37.5%);
     font-size: 1.25rem;
-    font-weight: $medium-text;
+    font-weight: $heavy-text;
+    text-transform: uppercase;
     &:hover {
       color: black;
     }
@@ -130,10 +146,21 @@
 
 @include fadeRight();
 
+i {
+  font-size: 4rem;
+  color: darken($branding-color, 15%);  
+  vertical-align: bottom;
+  margin-left: 1rem;
+  margin-right: 1rem; 
+  &:hover {
+    color: $branding-color;
+  }
+}
+
 .projects-title {
   font-size: 5rem;
   font-weight: $heavy-text;
-  color: darken($branding-color, 15%);
+  color: darken($highlight-color, 15%);
   text-transform: uppercase;
   padding-top: 1rem;
 }
@@ -144,18 +171,20 @@
     margin-top: 2rem;
   }
   .project-link {
-    color: $branding-color;
+    color: $highlight-color;
     font-weight: $heavy-text;
     margin-right: 0.5rem;
     &:hover {
-      @include underline ($thickness: 0.25rem);
+      @include underline ($thickness: 0.25rem, $color: $highlight-color);
     }
   }
   a {
-  font-size: 3rem; 
-    font-weight: $light-text;   
+    font-size: 3rem; 
+    font-weight: $light-text;
+    color: darken($highlight-color, 25%);   
     &:hover {
       text-decoration: none;
+      color: $highlight-color;   
     }
   }
   .ion-ios7-arrow-thin-right {
@@ -218,14 +247,14 @@ ul.detail-tech-phases {
 
 .process-title {
   @extend .projects-title;
-  color: darken($branding-color, 27.5%)
+  color: $branding-darker;
 }
 
 // contact 
 
 .connect-title {
   @extend .projects-title;
-  color: darken($branding-color, 27.5%) 
+  color: $branding-darker; 
 }
 
 .connect-links {
@@ -236,10 +265,11 @@ ul.detail-tech-phases {
 
 .connect-text {
   @extend .projects-single-teaser;
-  color: $black;
+  color: $branding-darker;
   font-size: 1.5rem;
   a {
     @include underline($color: $branding-darker);
+    color: $branding-darker;
   }
 }
 
@@ -270,15 +300,23 @@ ul.detail-tech-phases {
 .contact-container {
   i {
     font-size: 4rem;
-    text-align: center;
+    text-align: left;
   }
 }
 
 .connect-links {
-  text-align: center;
+  text-align: left;
   i {
     margin-right: 2rem;
   }
+}
+
+.connect-thanks {
+  font-family: $accent-font;
+  font-size: 2rem;
+  text-align: left;
+  color: $branding-darker;
+  font-weight: $light-text;
 }
 
 // project
