--- a/source/kickstarter.html.erb
+++ b/source/kickstarter.html.erb
@@ -46,25 +46,82 @@ layout: kickstarter
         I am a self taught designer/developer based in Brooklyn, looking to join a team that I can contribute to and learn from.
       </h4>
       <p class="application-intro-body">
-        I think Kickstarter could be that place. 
+        Let me begin with why I think we fit
+
+        You are an organization built on a highly active community that uses technology to transform ideas into reality. 
+
+        With your products, you have endless opportunities to build on your past success and push the envelope of what a community, organized online, is capable of.
+
+        Those products need to be well thought out and well executed in order to excite and engage the community. 
+
+        I am passionate about thoughtful design, and to me, thoughtful design is researching, testing, iterating and learning about your end user. Engaging aesthetics are a must, but so are user-flows, responsiveness, accessibility, and performance.
+
+        Managing the creative process is tough. It takes discipline and insight.   
+
+        Manager of one is an overused term, but I think it is still an important characteristic. In many of my previous positions I worked one-on-one with the founder of the organization or a very senior member who typically don't have time to micro manage and need to get on with the bigger-picture work. I manage my own work, but am comfortable working with direction.
+        
+        I have managed communities, both in highschool and college and is something I continue to pursue. I believe community is a basic human need, and that makes it a very powerful paradigm for creating new tools/products/businesses. I am really excited about the power of the web to create and facilitate communities and see the standout companies of the future as those who are able to use technology to connect people and foster active communities.
+
+        I am excited to contribute to a platform that has a strong community and sees that as a core value. I am excited about the opportunity to use my technical skills to grow and foster the existing community with thoughtful products that make the Kickstarter experience more effective and inspire delight in those who use it. 
+        
+        If I had to name a single skill that sets apart good designers, researchers and good people in general, it is empathy. Spending my youth in transitional South Africa taught me many things, but primarily it taught me to have a sense of humor and a desire to see the world as other people see it. If you are serious about creating things for other people, then you must learn empathy. 
+        
+        Curiosity:
+
+        Empathy:
+
+        I love great design. Great design performs an acrobatic act of inspiring delight and being completely invisible. 
+
+        If you are not learning, you are not moving forward. Gone are the days when learning is handed down from on high, and once you have your degree, that's it, learning time over. 
+
+        Honestly, you look like a lot of fun to work with. You seem to understand that good ideas and good work does not keep regular office hours and that the best ideas often come from serendipitous encounters and off-the-cuff conversations. This requires new ideas and new people. 
+
       </p>
     </div><!-- row  application-intro-->    
     <div class="application-process">
       <h3 class="application-header">
-        Process
+        Design
       </h3>
       <p class="application-process-body">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam, adipisci, praesentium repellat rerum illo asperiores nesciunt aliquid ratione temporibus natus error voluptates iure iusto quidem distinctio vero at eveniet odio cum numquam neque in quasi commodi similique itaque culpa debitis odit dicta architecto nihil amet suscipit minima harum porro ullam accusamus voluptatibus quisquam facere id omnis! Cum, illum, nisi, voluptates, officiis ipsam laboriosam numquam ea inventore facilis at perspiciatis ad impedit? Facilis, porro magni pariatur!
+        If you haven't noticed yet, this application is in the form of a Kickstarter project page, with a few design changes which I will go into below. It may seem gimmicky, but really there is a sound reason I went this route. You are looking for a product designer who can work within and evolve your visual framework. What better way to demonstrate that then to work within and evolve your established visual framework?
+        <br>
+        <br>
+        Here are the decisions I made and why:
       </p>
+
+      <h4 class="application-subheader">
+        Responsive Project Pages
+      </h4>
+
+      <p class="application-process-body">
+        The most obvious opportunity I saw was to make the project page responsive. There are endless statistics on how much of web traffic is moving to mobile, but for me the most compelling reason is simply that people share their project pages on all number of platforms; twitter, facebook, email, text etc. and these messages are more often than not read on a mobile device. If the project page were made responsive, then I believe you could increase conversion of visitors to that page and make it easier for kickstarters to turn their ideas into reality.
+      </p>
+
+      <h4 class="application-subheader">
+        Calls to Action
+      </h4>
+
+      <p class="application-process-body">
+        It is essential to guide people through the information you present. Size, color and relative position all work to confer importance. Currently your links and calls to action and signified by two colors: kickstarter green, and a light blue. I've consolidated these into kickstarter green for buttons and other prominent calls to action, and a slightly muted green for secondary links. I think this gives the page more visual unity, and identifies interactive elements in a more consistent way.
+      </p> 
+        
+      <h4 class="application-subheader">
+        Structure
+      </h4>
+
+      <p class="application-process-body">
+        The border radius does convey and soft, approachable aesthetic, but I think that is already achieved through muted tones and the friendly, open primary branding color. I believe those elements contrasted by crisp corners lend the UI structure and intent.
+      </p>
+
+      <h4 class="application-subheader">
+        Color Palette
+      </h4>
+
+      <p class="application-process-body">
+        The element that really looked out of place was the blue bio panel. It did not seem to have any visual relationship with the rest of the page. I cut down on the color scheme, opting to keep it simple with the kickstarter green and blue-gray of the background.
+      </p> 
+      
     </div><!-- row application-process -->
-    <div class="application-opportunities">
-      <h3 class="application-header">
-        Opportunities
-      </h3>
-      <p class="application-opportunities-body">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam, adipisci, praesentium repellat rerum illo asperiores nesciunt aliquid ratione temporibus natus error voluptates iure iusto quidem distinctio vero at eveniet odio cum numquam neque in quasi commodi similique itaque culpa debitis odit dicta architecto nihil amet suscipit minima harum porro ullam accusamus voluptatibus quisquam facere id omnis! Cum, illum, nisi, voluptates, officiis ipsam laboriosam numquam ea inventore facilis at perspiciatis ad impedit? Facilis, porro magni pariatur!
-      </p>
-    </div><!-- row application-opportunities -->
   </div><!-- application-body -->
     <div class="application-sidebar-container">
     <div class="small-12 medium-4 large-4 columns application-sidebar">
@@ -75,6 +132,7 @@ layout: kickstarter
           </h3>
           <ul class="frontend-list">
             <li class="application-list-item">HTML / </li>
+            <li class="application-list-item">CSS / </li>
             <li class="application-list-item">Sass / </li>
             <li class="application-list-item">Git /</li>
             <li class="application-list-item">Foundation</li>
@@ -175,7 +233,7 @@ layout: kickstarter
               Octave New York
             </h4>
             <p class="experience-body">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, quam.
+              Built and managed internal culture platform. Initiated and edited a bi-monthly newsletter with the goal of driving traffic to our site. Made informed design decisions guided by Google Analytics and Mailchimp data.
             </p>
             <p class="experience-duration">
               April 2011 - Present
@@ -189,10 +247,10 @@ layout: kickstarter
               Research Assistant
             </h4>
             <h4 class="experience-subheader">
-              Mirka Prazak
+              Dr. Mirka Prazak
             </h4>
             <p class="experience-body">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, nisi.
+              Mirka and I worked together to study AIDS orphans in rural Kenya. I focused on statistical analysis, drawing insights from 20 years of data collected in the field. Our work together is currently being considered for publication.
             </p>
             <p class="experience-duration">
               January 2007 - August 2010
@@ -207,7 +265,7 @@ layout: kickstarter
               Bennington College
             </h4>
             <p class="experience-body">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, nisi.
+              As Senior House Chair I lead a team of 12 in fostering residential communities and managing relations with the administration. We planned campus wide events and worked to foster strong in-house cultures.
             </p>
             <p class="experience-duration">
               August 2009 - May 2010
