--- a/source/kickstarter.html.erb
+++ b/source/kickstarter.html.erb
@@ -6,7 +6,7 @@ layout: kickstarter
   <div class="row">
     <div class="position-title-container small-12 medium-12 large-12 columns">
       <h2 class="position-title">
-        Product Design: An Application
+        Product Designer - Application
       </h2>
       <h3 class="position-name">
         from Timothy Voice
