--- a/source/stylesheets/app.css.scss
+++ b/source/stylesheets/app.css.scss
@@ -30,6 +30,7 @@
 @import "partials/images";
 @import "partials/project";
 @import "partials/kickstarter";
+@import "partials/styleguide";
  
 
 // Or selectively include components
