--- a/source/stylesheets/modules/_mixins.scss
+++ b/source/stylesheets/modules/_mixins.scss
@@ -4,19 +4,24 @@
 
 @mixin breakpoint($point) {
   @if $point == xxlarge {
-    @media only screen and (min-width: 120.063em) { @content; }
+    @media only screen and (min-width: 90.063em) { @content; } /* min-width 1441px, xlarge screens */
+    @media only screen and (min-width: 90.063em) and (max-width: 120em) { @content; } /* min-width 1441px and max-width 1920px, use when QAing xlarge screen-only issues */
   }
   @else if $point == xlarge {
-    @media only screen and (max-width: 90.063em) { @content; }
+    @media only screen and (min-width: 90.063em) { @content; } /* min-width 1441px, xlarge screens */
+    @media only screen and (min-width: 90.063em) and (max-width: 120em) { @content; } /* min-width 1441px and max-width 1920px, use when QAing xlarge screen-only issues */
+
   }
   @else if $point == large {
-    @media only screen and (min-width: 64.063em) { @content; }
+    @media only screen and (min-width: 64.063em) { @content; } /* min-width 1025px, large screens */
+    @media only screen and (min-width: 64.063em) and (max-width: 90em) { @content; } /* min-width 1025px and max-width 1440px, use when QAing large screen-only issues */
   }
   @else if $point == medium {
-    @media only screen and (min-width: 47.063em) { @content; }
+    @media only screen and (min-width: 40.063em) { @content; } /* min-width 641px, medium screens */
+    @media only screen and (min-width: 40.063em) and (max-width: 64em) { @content; } /* min-width 641px and max-width 1024px, use when QAing tablet-only issues */
   }
   @else if $point == small {
-    @media only screen and (max-width: 47em) { @content; }
+    @media only screen and (max-width: 40em) { @content; } /* max-width 640px, mobile-only styles, use when QAing mobile issues */
   }
 }
 
@@ -97,4 +102,36 @@
   border-right: 0.0625rem $color solid;
   border-bottom: 0.0625rem $color solid;
   border-left: 0.0625rem $color solid;
+}
+
+/* ============================ 
+  Structure
+============================ */
+@mixin center($width: -100px, $height: -100px) {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  margin-top: $height;
+  margin-left: $width;
+}
+
+//centering anything (known dimensions)
+
+@mixin dead-center($content-width, $content-height) {
+  margin-left: (-1 * $content-width/2);
+  position: absolute;
+  top: (-1 * $content-height/2);
+  left: 50%;
+  width: $content-width;
+  visibility: visible;
+}
+
+/* ============================ 
+  UI
+============================ */
+
+@mixin project-shadow($color: $accent-color) {
+  -webkit-box-shadow: -8px 8px 0px 0px $color;
+  -moz-box-shadow:    -8px 8px 0px 0px $color;
+  box-shadow:         -8px 8px 0px 0px $color;
 }
