--- a/source/stylesheets/modules/_variables.scss
+++ b/source/stylesheets/modules/_variables.scss
@@ -21,6 +21,7 @@ $background: hsla(30, 19, 94%, 1);//gray
 //projects
 $octavejournal-color: hsla(229, 43, 39%, 1);
 $ggs-color: hsla(134, 27, 27%, 1);
+$mallydoor-color: hsla(0,0,0%,1);
 
 //applications
 $kickstarter: hsla(144, 81, 87%, 1);
