--- a/source/_navigation.erb
+++ b/source/_navigation.erb
@@ -1,4 +1,4 @@
-<header class="bottom-fixed nav-up">
+<header class="fixed nav-up contain-to-grid">
   <nav class="top-bar" data-topbar>
     <ul class="title-area">
       <li class="name">
@@ -31,8 +31,9 @@
   
       <!-- Left Nav Section -->
       <ul class="left">
-        
-      
+        <a href="#">
+          <%= partial "images/branding.svg"  %>
+        </a>      
       </ul>
     </section>
   </nav>
