--- a/source/stylesheets/partials/_base.scss
+++ b/source/stylesheets/partials/_base.scss
@@ -57,22 +57,23 @@ ul {
     left:0; 
     right:0; 
     bottom:0; 
-    background-color: $branding-color; 
+    background-color: $background; 
     z-index:99;
 }
 
 #splash {
-  background: $branding-color;
+  background: $background;
 }
 
 .branding-band {
-  background: $branding-color;
+  background: $background;
   width: 100%;
 }
 
 .projects-band {
-  background: $branding-darker;
+  background: $background;
   width: 100%;
+  padding-top: 2rem;
 }
 
 .process-band {
@@ -122,4 +123,16 @@ ul {
 
 .contact-container {
   height: 7rem;
+}
+
+.horizon {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 0px;
+  width: 100%;
+  height: 1px;
+  overflow: visible;
+  visibility: visible;
+  display: block;
 }
