--- a/css/main.css
+++ b/css/main.css
@@ -15,19 +15,19 @@ p {
 
 a {
     color: blue;
-    text-decoration: underline;
+    text-decoration: none;
 }
 
 /* GRID SYSTEM */
 
 .flex-grid {
     display: flex;
-    margin: 10px;
     justify-content: center;
     flex-direction: column;
 }
 
 .flex-grid .row {
+    margin: 10px;
     flex-direction: row;
 }
 
@@ -52,12 +52,12 @@ a {
 }
 
 .blog-summary-container {
-    /* padding: 25px; */
+    padding: 25px 0px;
 }
 
 .blog-summary-title {
     font-size: 24px;
-    line-height: 24px;
+    line-height: 32px;
 }
 
 .blog-summary-text {
